REFACTOR: (Changes matching Issue Codeinwp/feedzy-rss-feeds-pro#16) Part of the fixes of Issue Codeinwp/feedzy-rss-feeds-pro#16
Changed ```.distignore```
Refactored some methods
Fixed ```gulp/version.js```
Removed ```dbgx_debug_var()```
Other small changes

References Codeinwp/feedzy-rss-feeds-pro#16

User: bogdan.preda@themeisle.com <Bogdan Preda>

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "rss",
     "feed"
   ],
-  "textdomain": "feedzy-rss-feeds-translate",
+  "textdomain": "feedzy_rss_translate",
   "author": "Themeisle <friends@themeisle.com>",
   "license": "GPL-3.0+",
   "bugs": {
