--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -6,11 +6,10 @@ engines:
     enabled: true
     config:
       languages:
-      - ruby
-      - javascript
-      - python
-      - php
-          mass_threshold: 70
+      javascript:
+        mass_threshold: 70
+      php:
+        mass_threshold: 70
   eslint:
     enabled: true
   fixme:
