--- a/.travis.yml
+++ b/.travis.yml
@@ -34,7 +34,7 @@ script:
 - if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then  grunt travis; fi;
 after_script:
 - chmod +x bin/prepare-deploy.sh
-- if [ "$TRAVIS_PULL_REQUEST" == "false" ] then ". ./bin/prepare-deploy.sh"; fi;
+- if [ "$TRAVIS_PULL_REQUEST" == "false" ] then ./bin/prepare-deploy.sh; fi;
 deploy:
 - provider: s3
   access_key_id: "$AWS_ACCESS_KEY"
