--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,6 @@ env:
   global:
   - MASTER_BRANCH=master UPSTREAM_REPO=Codeinwp/feedzy-rss-feeds STORE_URL=https://themeisle.com
     DEPLOY_BUILD=7.0
-
 install:
 - chmod +x bin/install-dependencies.sh
 - ". ./bin/install-dependencies.sh"
@@ -31,7 +30,7 @@ script:
 - if [ "$TRAVIS_PULL_REQUEST" != "false" ]; then  grunt travis; fi;
 after_script:
 - openssl aes-256-cbc -K $encrypted_030a3191f4c5_key -iv $encrypted_030a3191f4c5_iv
-  -in key.enc -out /tmp/deploy_rsa -d
+  -in key.enc -out /tmp/key -d
 - chmod +x bin/prepare-deploy.sh
 - if [ "$TRAVIS_PULL_REQUEST" == "false" ]; then npm install && ./bin/prepare-deploy.sh;
   fi;
