--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "feedzy-rss-feeds",
   "version": "3.1.8",
-  "description": "Feedzy RSS Feeds Lite",
+  "description": "Feedzy RSS Feeds - lite version",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Codeinwp/feedzy-rss-feeds.git"
