--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lasttranslator": "Themeisle Translate Team <friends@themeisle.com>"
   },
   "devDependencies": {
+    "grunt": "^1.0.1",
     "grunt-plugin-fleet": "codeinwp/grunt-plugin-fleet",
     "load-project-config": "~0.2.0"
   },
