Added Gutenberg Block for Feedzy
Added Gutenberg block for Feedzy, as well as all the dependencies for it. It needs a lot of testing to make sure it's working everywhere, with free and pro.

--- a/.distignore
+++ b/.distignore
@@ -13,9 +13,9 @@ bin
 tests
 phpunit.xml
 npm-debug.log
-dist
 artifact
 composer.json
 composer.lock
 package-lock.json
 key.enc
+includes/gutenberg/src/
