--- a/eyepatch.yml
+++ b/eyepatch.yml
@@ -1,7 +1,7 @@
 # The type of the repository
 # If auto it will scan style.css or first level .php files
 # for `Theme Name` or `Plugin Name`
-# can have one of this values
+# can have one of this valuessdada
 # type: wordpress-plugin|wordpress-theme|vuejs-kit|auto
 type: wordpress-plugin
 
