Integrate Cypress.io

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@ bin
 package-lock.json
 composer.lock
 /dist
+cypress/integration/examples
+cypress/integration/localhost*
+cypress/plugins
+cypress/fixtures
+cypress.env.json
