--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "raw-loader": "^0.5.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
-    "webpack": "^3.10.0"
+    "webpack": "^3.10.0",
+    "cypress": "^3.2.0"
   }
 }
