--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,7 @@ matrix:
       env: WP_VERSION=5.1
       dist: precise
     - name: Cypress
-      if: $TRAVIS_PULL_REQUEST != "false"
+      if: type IN (pull_request)
       language: node_js
       node_js:
         - 10.8
@@ -32,7 +32,7 @@ matrix:
         - docker-compose -f docker-compose.travis.yml up -d
         - bash ./bin/wp-init.sh && bash ./bin/run-e2e-tests.sh
     - name: Cypress Gutenberg
-      if: $TRAVIS_PULL_REQUEST != "false"
+      if: type IN (pull_request)
       language: node_js
       node_js:
         - 10.8
