--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ matrix:
   fast_finish: true
   include:
     - php: 7.3
+      env: WP_VERSION=5.4
     - php: 7.2
     - php: 7.1
     - php: 7.0
