[skip ci] Drop legacy library

--- a/composer.json
+++ b/composer.json
@@ -21,8 +21,7 @@
     "source": "https://github.com/Codeinwp/feedzy-rss-feeds"
   },
   "require": {
-    "codeinwp/themeisle-sdk": "master",
-    "xrstf/composer-php52": "^1.0.20"
+    "codeinwp/themeisle-sdk": "master"
   },
   "autoload": {
     "files": [
@@ -30,16 +29,5 @@
     ]
   },
   "minimum-stability": "dev",
-  "prefer-stable": true,
-  "scripts": {
-    "post-install-cmd": [
-      "xrstf\\Composer52\\Generator::onPostInstallCmd"
-    ],
-    "post-update-cmd": [
-      "xrstf\\Composer52\\Generator::onPostInstallCmd"
-    ],
-    "post-autoload-dump": [
-      "xrstf\\Composer52\\Generator::onPostInstallCmd"
-    ]
-  }
+  "prefer-stable": true
 }
