--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "feedzy-rss-feeds",
-  "version": "3.5.1",
+  "version": "3.3.9",
   "description": "Feedzy RSS Feeds - lite version",
   "repository": {
     "type": "git",
@@ -18,9 +18,7 @@
   },
   "scripts": {
     "dev": "cross-env BABEL_ENV=default webpack --watch",
-    "build": "cross-env BABEL_ENV=default NODE_ENV=production webpack",
-    "cypress:open": "cypress open",
-    "cypress:run": "cd cypress && docker-compose up --exit-code-from cypress"
+    "build": "cross-env BABEL_ENV=default NODE_ENV=production webpack"
   },
   "pot": {
     "reportmsgidbugsto": "https://github.com/Codeinwp/feedzy-rss-feeds/issues",
@@ -54,7 +52,6 @@
     "raw-loader": "^0.5.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
-    "webpack": "^3.10.0",
-    "cypress": "^3.2.0"
+    "webpack": "^3.10.0"
   }
 }
