--- a/composer.json
+++ b/composer.json
@@ -31,6 +31,12 @@
   },
   "minimum-stability": "dev",
   "prefer-stable": true,
+  "config": {
+    "optimize-autoloader": true,
+    "platform": {
+      "php": "5.6"
+    }
+  },
   "scripts": {
     "post-install-cmd": [
       "xrstf\\Composer52\\Generator::onPostInstallCmd"
