--- a/package.json
+++ b/package.json
@@ -39,10 +39,13 @@
     "browser-sync-webpack-plugin": "^1.2.0",
     "cross-env": "^5.1.1",
     "css-loader": "^0.28.7",
-    "eslint": "^4.14.0",
-    "eslint-config-prettier": "^2.9.0",
+    "cypress": "^3.2.0",
+    "eslint": "^7.19.0",
+    "eslint-config-prettier": "^7.2.0",
     "eslint-config-wordpress": "^2.0.0",
-    "eslint-plugin-prettier": "^2.4.0",
+    "eslint-plugin-chai-friendly": "^0.6.0",
+    "eslint-plugin-cypress": "^2.11.2",
+    "eslint-plugin-prettier": "^3.3.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "grunt": "^1.0.1",
     "grunt-helpscout-faq": "~0.1.0",
@@ -54,7 +57,6 @@
     "raw-loader": "^0.5.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.19.1",
-    "webpack": "^3.10.0",
-    "cypress": "^3.2.0"
+    "webpack": "^3.10.0"
   }
 }
