--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,10 @@
       "vendor/codeinwp/themeisle-sdk/load.php"
     ]
   },
+  "scripts": {
+    "format": "phpcbf --standard=phpcs.xml --report-summary --report-source",
+    "lint": "phpcs --standard=phpcs.xml"
+  },
   "minimum-stability": "dev",
   "prefer-stable": true,
   "config": {
@@ -35,5 +39,9 @@
     "platform": {
       "php": "5.6"
     }
+  },
+  "require-dev": {
+    "wp-coding-standards/wpcs": "1.2.1",
+    "dealerdirect/phpcodesniffer-composer-installer": "^0.7.1"
   }
 }
