feat: adds build dev artifacts workflow

--- a/.distignore
+++ b/.distignore
@@ -26,3 +26,10 @@ cypress.json
 cypress.env.json.template
 docker-compose.travis.yml
 .github
+.idea
+.babelrc
+.codeclimate.yml
+.csslintrc
+.eslintignore
+.eslintrc
+.jshintignore
