--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "dev": "cross-env BABEL_ENV=default webpack --watch",
     "build": "cross-env BABEL_ENV=default NODE_ENV=production webpack",
     "cypress:open": "cypress open",
+    "dist": "bash bin/dist.sh",
     "cypress:run": "cd cypress && docker-compose up --exit-code-from cypress"
   },
   "pot": {
