move e2e on gh actions

--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -10,8 +10,7 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - env: "default"
-          - env: "gutenberg"
+          - env: ["default","gutenberg"]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
