--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -10,9 +10,13 @@ jobs:
       fail-fast: false
       matrix:
           env: ["default","gutenberg"]
+
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14'
       - uses: actions/cache@v2
         id: npm-and-build-cache
         with:
@@ -24,8 +28,6 @@ jobs:
             ${{ runner.os }}-node-
       - name: Install npm deps
         run: npm ci
-      - name: Install composer deps
-        run: composer install --no-dev
       - name: Install composer deps
         run: composer install --no-dev
       - name: Bootstrap environment
@@ -41,6 +43,6 @@ jobs:
         with:
           env: host=localhost,port=8080
           browser: chrome
-          install: ${{ ! steps.yarn-and-build-cache.outputs.cache-hit }}
+          install: ${{ ! steps.npm-and-build-cache.outputs.cache-hit }}
           headless: true
           spec: cypress/integration/${{ matrix.env }}/**/*
