--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -43,6 +43,6 @@ jobs:
         with:
           env: host=localhost,port=8080
           browser: chrome
-          install: ${{ ! steps.npm-and-build-cache.outputs.cache-hit }}
+          install: false
           headless: true
           spec: cypress/integration/${{ matrix.env }}/**/*
