--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -27,15 +27,15 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
       - name: Install npm deps
-        run: npm ci --unsafe-perm=true
+        run: npm ci
       - name: Install composer deps
         run: composer install --no-dev
-      - name: Bootstrap environment
-        run: docker-compose -f docker-compose.travis.yml up -d
-      - name: Install environment
-        run: |
-          bash ./bin/wp-init.sh
-          bash ./bin/run-e2e-tests-${{matrix.env}}.sh
+#      - name: Bootstrap environment
+#        run: docker-compose -f docker-compose.travis.yml up -d
+#      - name: Install environment
+#        run: |
+#          bash ./bin/wp-init.sh
+#          bash ./bin/run-e2e-tests-${{matrix.env}}.sh
       - name: Run ${{ matrix.env }} Cypress tests
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
