--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -15,6 +15,7 @@ services:
     image: wordpress:cli
     restart: always
     volumes:
+      - ./bin:/var/www/html/bin
       - ~/wpcore:/var/www/html/
       - ./wp-content:/var/www/html/wp-content/
       - .:/var/www/html/wp-content/plugins/feedzy-rss-feeds/
