--- a/package.json
+++ b/package.json
@@ -45,9 +45,9 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-config-wordpress": "^2.0.0",
     "eslint-plugin-prettier": "^3.3.1",
-    "extract-text-webpack-plugin": "^3.0.2",
     "grunt": "^1.3.0",
     "load-project-config": "~0.2.1",
+    "mini-css-extract-plugin": "^1.4.1",
     "node-sass": "^5.0.0",
     "postcss-loader": "^5.2.0",
     "query-string": "^7.0.0",
