--- a/.babelrc
+++ b/.babelrc
@@ -1,16 +1,16 @@
 {
   "presets": [
     [
-      "env",
+      "@babel/env",
       {
         "modules": false
       }
     ]
   ],
   "plugins": [
-    "transform-object-rest-spread",
+    "@babel/plugin-proposal-object-rest-spread",
     [
-      "transform-react-jsx",
+      "@babel/transform-react-jsx",
       {
         "pragma": "wp.element.createElement"
       }
@@ -18,7 +18,7 @@
   ],
   "env": {
     "default": {
-      "plugins": ["transform-runtime"]
+      "plugins": ["@babel/transform-runtime"]
     }
   }
 }
