--- a/package.json
+++ b/package.json
@@ -35,12 +35,13 @@
     "@babel/plugin-transform-react-jsx": "^7.13.12",
     "@babel/plugin-transform-runtime": "^7.13.10",
     "@babel/preset-env": "^7.13.12",
+    "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
     "browser-sync": "^2.26.14",
     "browser-sync-webpack-plugin": "^2.3.0",
     "cross-env": "^7.0.3",
     "css-loader": "^5.2.0",
-    "cypress": "^7.0.0",
+    "cypress": "^6.4.0",
     "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-config-wordpress": "^2.0.0",
@@ -54,6 +55,7 @@
     "raw-loader": "^4.0.2",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
-    "webpack": "^5.30.0"
+    "webpack": "^5.30.0",
+    "webpack-cli": "^4.6.0"
   }
 }
