--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "dev": "cross-env BABEL_ENV=default webpack --watch",
     "build": "cross-env BABEL_ENV=default NODE_ENV=production webpack",
     "cypress:open": "cypress open",
+    "up:ci": "export DOCKER_FILE=docker-compose.ci.yml && bash bin/wp-init.sh",
+    "down:ci": "export DOCKER_FILE=docker-compose.ci.yml && bash bin/wp-down.sh",
     "dist": "bash bin/dist.sh",
-    "cypress:run": "cd cypress && docker-compose up --exit-code-from cypress"
+    "cypress:run": "cypress run --browser=chrome"
   },
   "pot": {
     "reportmsgidbugsto": "https://github.com/Codeinwp/feedzy-rss-feeds/issues",
