--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -46,3 +46,7 @@ jobs:
           install: ${{ ! steps.npm-and-build-cache.outputs.cache-hit }}
           headless: true
           spec: cypress/integration/${{ matrix.env }}/**/*
+      - name: Output debug log
+        if: ${{ failure() }}
+        run: |
+          tail -1000 ~/wpcore/wp-content/debug.log
