--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "scripts": {
     "dev": "cross-env BABEL_ENV=default webpack --watch",
     "build": "cross-env BABEL_ENV=default NODE_ENV=production webpack",
+    "release": "semantic-release --debug",
     "cypress:open": "cypress open",
     "up:ci": "export DOCKER_FILE=docker-compose.ci.yml && bash bin/wp-init.sh",
     "down:ci": "export DOCKER_FILE=docker-compose.ci.yml && bash bin/wp-down.sh",
@@ -37,10 +38,14 @@
     "@babel/plugin-transform-react-jsx": "^7.13.12",
     "@babel/plugin-transform-runtime": "^7.13.10",
     "@babel/preset-env": "^7.13.12",
+    "@semantic-release/changelog": "^5.0.1",
+    "@semantic-release/exec": "^5.0.0",
+    "@semantic-release/git": "^9.0.0",
     "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
     "browser-sync": "^2.26.14",
     "browser-sync-webpack-plugin": "^2.3.0",
+    "conventional-changelog-simple-preset": "^1.0.15",
     "cross-env": "^7.0.3",
     "css-loader": "^5.2.0",
     "cypress": "^6.4.0",
@@ -49,13 +54,16 @@
     "eslint-config-wordpress": "^2.0.0",
     "eslint-plugin-prettier": "^3.3.1",
     "grunt": "^1.3.0",
-    "load-project-config": "~0.2.1",
+    "grunt-version": "^2.0.0",
+    "grunt-wp-readme-to-markdown": "^2.0.1",
     "mini-css-extract-plugin": "^1.4.1",
     "node-sass": "^5.0.0",
     "postcss-loader": "^5.2.0",
     "query-string": "^7.0.0",
     "raw-loader": "^4.0.2",
+    "replace-in-file": "^6.2.0",
     "sass-loader": "^11.0.1",
+    "semantic-release": "^17.1.1",
     "style-loader": "^2.0.0",
     "webpack": "^5.30.0",
     "webpack-cli": "^4.6.0"
