adds PHP compatibility standard

--- a/composer.json
+++ b/composer.json
@@ -42,6 +42,7 @@
   },
   "require-dev": {
     "wp-coding-standards/wpcs": "1.2.1",
-    "dealerdirect/phpcodesniffer-composer-installer": "^0.7.1"
+    "dealerdirect/phpcodesniffer-composer-installer": "^0.7.1",
+    "phpcompatibility/phpcompatibility-wp": "*"
   }
 }
