--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "url": "https://github.com/Codeinwp/feedzy-rss-feeds/issues"
   },
   "scripts": {
-    "dev": "cross-env BABEL_ENV=default webpack --watch",
-    "build": "cross-env BABEL_ENV=default NODE_ENV=production webpack",
+    "dev": "wp-scripts start --mode=development",
+    "build": "wp-scripts lint-js ./includes/gutenberg/src/ && wp-scripts build --mode=production",
+    "lint:js": "wp-scripts lint-js ./includes/gutenberg/src/",
     "release": "semantic-release --debug",
     "cypress:open": "cypress open",
     "up:ci": "export DOCKER_FILE=docker-compose.ci.yml && bash bin/wp-init.sh",
@@ -41,6 +42,16 @@
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/exec": "^5.0.0",
     "@semantic-release/git": "^9.0.0",
+    "@wordpress/components": "^13.0.2",
+    "@wordpress/compose": "^3.25.2",
+    "@wordpress/data": "^4.27.2",
+    "@wordpress/dom-ready": "^2.13.2",
+    "@wordpress/element": "^2.20.2",
+    "@wordpress/eslint-plugin": "^9.0.3",
+    "@wordpress/i18n": "^3.19.2",
+    "@wordpress/icons": "^2.10.2",
+    "@wordpress/media-utils": "^1.20.2",
+    "@wordpress/scripts": "^14.1.1",
     "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
     "browser-sync": "^2.26.14",
@@ -51,13 +62,13 @@
     "cypress": "^6.4.0",
     "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
-    "eslint-config-wordpress": "^2.0.0",
     "eslint-plugin-prettier": "^3.3.1",
     "grunt": "^1.3.0",
     "grunt-version": "^2.0.0",
     "grunt-wp-readme-to-markdown": "^2.0.1",
     "mini-css-extract-plugin": "^1.4.1",
     "node-sass": "^5.0.0",
+    "postcss": "^8.2.10",
     "postcss-loader": "^5.2.0",
     "query-string": "^7.0.0",
     "raw-loader": "^4.0.2",
