[skip ci] improve e2e workflow

--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -1,8 +1,8 @@
 name: Test e2e
 
 on:
-  pull_request:
-    types: [opened, synchronize, ready_for_review]
+  push:
+    branches-ignore: master
 jobs:
   e2e:
     name: E2E for ${{ matrix.env }}
@@ -38,6 +38,7 @@ jobs:
       - name: Run ${{ matrix.env }} Cypress tests
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
+          GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
         uses: cypress-io/github-action@v2
         with:
           env: host=localhost,port=8080
