--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "codeinwp/feedzy-rss-feeds",
-  "description": "Feedzy RSS feedzy for WordPress.",
+  "description": "Feedzy RSS feeds for WordPress.",
   "keywords": [
     "wordpress",
     "feeds",
