--- a/package.json
+++ b/package.json
@@ -59,6 +59,8 @@
     "semantic-release-slack-bot": "^2.1.0"
   },
   "dependencies": {
-    "classnames": "^2.3.1"
+    "classnames": "^2.3.1",
+    "lodash": "^4.17.21",
+    "react-joyride": "^2.4.0"
   }
 }
