--- a/composer.json
+++ b/composer.json
@@ -38,10 +38,13 @@
     "optimize-autoloader": true,
     "platform": {
       "php": "5.6"
+    },
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true
     }
   },
   "require-dev": {
-    "wp-coding-standards/wpcs": "1.2.1",
+    "wp-coding-standards/wpcs": "^2.3",
     "dealerdirect/phpcodesniffer-composer-installer": "^0.7.1",
     "phpcompatibility/phpcompatibility-wp": "*"
   }
