--- a/.github/workflows/build-dev-artifacts.yml
+++ b/.github/workflows/build-dev-artifacts.yml
@@ -4,7 +4,9 @@ on:
   pull_request:
     types: [opened, synchronize, ready_for_review]
 
-
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event_name == 'pull_request' && github.head_ref || github.ref }}
+  cancel-in-progress: true
 jobs:
   dev-zip:
     name: Build ZIP and upload to s3
