--- a/.github/workflows/build-dev-artifacts.yml
+++ b/.github/workflows/build-dev-artifacts.yml
@@ -74,7 +74,7 @@ jobs:
         uses: peter-evans/find-comment@v2
         with:
           issue-number: ${{ steps.get-pr-number.outputs.num }}
-          comment-author: github-actions[bot]
+          comment-author: pirate-bot
           token: ${{ secrets.BOT_TOKEN }}
           body-includes: Download [build]
 
