--- a/package.json
+++ b/package.json
@@ -59,8 +59,10 @@
     "semantic-release-slack-bot": "^2.1.0"
   },
   "dependencies": {
+    "array-move": "^4.0.0",
     "classnames": "^2.3.1",
     "lodash": "^4.17.21",
-    "react-joyride": "^2.4.0"
+    "react-joyride": "^2.4.0",
+    "react-sortable-hoc": "^2.0.0"
   }
 }
