--- a/package.json
+++ b/package.json
@@ -56,9 +56,7 @@
     "raw-loader": "^4.0.2",
     "replace-in-file": "^6.2.0",
     "semantic-release": "^17.4.2",
-    "semantic-release-slack-bot": "^2.1.0"
-  },
-  "dependencies": {
+    "semantic-release-slack-bot": "^2.1.0",
     "array-move": "^4.0.0",
     "classnames": "^2.3.1",
     "lodash": "^4.17.21",
