--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -46,7 +46,7 @@ jobs:
           config-file: cypress.config.js
           browser: chrome
           install: ${{ ! steps.npm-and-build-cache.outputs.cache-hit }}
-          spec: cypress/integration/${{ matrix.env }}/**/*
+          spec: cypress/e2e/${{ matrix.env }}/**/*
       - name: Output debug log
         if: ${{ failure() }}
         run: |
