--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     "source": "https://github.com/Codeinwp/feedzy-rss-feeds"
   },
   "require": {
-    "codeinwp/themeisle-sdk": "^3.3"
+    "codeinwp/themeisle-sdk": "^3.3",
+    "sentry/sentry": "4.7"
   },
   "autoload": {
     "files": [
@@ -37,7 +38,7 @@
   "config": {
     "optimize-autoloader": true,
     "platform": {
-      "php": "5.6"
+      "php": "7.2"
     },
     "allow-plugins": {
       "dealerdirect/phpcodesniffer-composer-installer": true
