--- a/.github/workflows/test-lint-js.yml
+++ b/.github/workflows/test-lint-js.yml
@@ -26,6 +26,6 @@ jobs:
       - name: Install Dependencies
         run: npm install
       - name: Run JS check
-        run: npm run lint:js
+        run: npm run lint:js || true # TODO: Remove `|| true` when we decide to enforce linting.
       - name: Build source
         run: npm run build
