--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -30,7 +30,9 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-node-
       - name: Install npm deps
-        run: npm ci
+        run: |
+          npm ci
+          npm run build
       - name: Install composer deps
         run: composer install --no-dev
       - name: Install environment
