--- a/.github/workflows/test-e2e.yml
+++ b/.github/workflows/test-e2e.yml
@@ -7,13 +7,7 @@ on:
     branches-ignore: master
 jobs:
   e2e:
-    name: E2E for ${{ matrix.env }}
-    env:
-      DOCKER_FILE: docker-compose.ci.yml
-    strategy:
-      fail-fast: false
-      matrix:
-          env: ["default","gutenberg"]
+    name: E2E
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -37,19 +31,15 @@ jobs:
         run: composer install --no-dev
       - name: Install environment
         run: |
-          npm run up:ci
-          bash ./bin/run-e2e-tests-${{matrix.env}}.sh
-      - name: Run ${{ matrix.env }} Cypress tests
-        env:
-          GITHUB_TOKEN: ${{ secrets.BOT_TOKEN }}
-        uses: cypress-io/github-action@v6
+          npm run wp-env start
+          npm run test:e2e
+      - name: Archive test results
+        if: failure()
+        uses: actions/upload-artifact@v4
         with:
-          env: host=localhost,port=8080
-          config-file: cypress.config.js
-          browser: chrome
-          install: ${{ ! steps.npm-and-build-cache.outputs.cache-hit }}
-          spec: cypress/e2e/${{ matrix.env }}/**/*
-      - name: Output debug log
-        if: ${{ failure() }}
-        run: |
-          tail -1000 ~/wpcore/wp-content/debug.log
+          name: e2e-playwright-results
+          path: artifacts
+          retention-days: 1
+          if-no-files-found: ignore
+
+
