--- a/.github/workflows/create-tag.yml
+++ b/.github/workflows/create-tag.yml
@@ -7,21 +7,19 @@ on:
 jobs:
   create_tag:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [12.x]
     steps:
       - uses: actions/checkout@master
         with:
           persist-credentials: false
-      - name: Build files using ${{ matrix.node-version }}
-        uses: actions/setup-node@v1
+      - name: Set up Node version
+        uses: actions/setup-node@v4
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 18
+      - name: Install dependencies
+        run: npm ci
       - name: Release new version
         id: release
         run: |
-          npm ci
           npm run release
         env:
           CI: true
