--- a/.github/workflows/test-php.yml
+++ b/.github/workflows/test-php.yml
@@ -38,7 +38,7 @@ jobs:
 
   phpunit:
     name: PHPUnit
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     services:
       mysql:
         image: mysql:5.7
