--- a/.github/workflows/test-php.yml
+++ b/.github/workflows/test-php.yml
@@ -19,6 +19,8 @@ jobs:
           extensions: simplexml
       - name: Checkout source code
         uses: actions/checkout@v2
+      - name: Install Subversion
+        run: sudo apt-get update && sudo apt-get install -y subversion
       - name: Get Composer Cache Directory
         id: composer-cache
         run: |
