--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "dev": "wp-scripts start --mode=development",
     "build": "wp-scripts build --config=webpack.config.js",
-    "lint:js": "wp-scripts lint-js ./js --ignore-pattern '**/build/**' --ignore-pattern '**/*.min.js'",
+    "lint:js": "wp-scripts lint-js ./js",
     "release": "semantic-release --debug",
     "dist": "bash bin/dist.sh",
     "test:e2e": "wp-scripts test-playwright --config tests/e2e/playwright.config.js",
@@ -43,6 +43,7 @@
     "@wordpress/e2e-test-utils-playwright": "^0.26.0",
     "@wordpress/element": "^5.35.0",
     "@wordpress/env": "^9.10.0",
+    "@wordpress/eslint-plugin": "^22.0.0",
     "@wordpress/i18n": "^4.58.0",
     "@wordpress/icons": "^9.49.0",
     "@wordpress/media-utils": "^4.49.0",
@@ -50,6 +51,7 @@
     "classnames": "^2.3.2",
     "conventional-changelog-simple-preset": "^1.0.15",
     "dayjs": "^1.10.4",
+    "eslint": "^8.57.1",
     "grunt": "^1.4.0",
     "grunt-version": "^2.0.0",
     "grunt-wp-readme-to-markdown": "^2.0.1",
