--- a/package.json
+++ b/package.json
@@ -17,8 +17,16 @@
     "url": "https://github.com/Codeinwp/feedzy-rss-feeds/issues"
   },
   "scripts": {
-    "dev": "wp-scripts start --mode=development",
-    "build": "wp-scripts build --config=webpack.config.js",
+    "build": "npm-run-all build:*",
+    "build:block": "wp-scripts build --webpack-src-dir=js/FeedzyBlock --output-path=build/block --output-filename=index.js",
+    "build:onboarding": "wp-scripts build --webpack-src-dir=js/Onboarding --output-path=build/onboarding --output-filename=index.js",
+    "build:feedback": "wp-scripts build --webpack-src-dir=js/FeedBack --output-path=build/feedback --output-filename=index.js",
+    "build:actions": "wp-scripts build --webpack-src-dir=js/ActionPopup --output-path=build/action-popup --output-filename=index.js",
+    "dev": "npm-run-all --parallel dev:*",
+    "dev:block": "wp-scripts start --webpack-src-dir=js/FeedzyBlock --output-path=build/block --output-filename=index.js",
+    "dev:onboarding": "wp-scripts start --webpack-src-dir=js/Onboarding --output-path=build/onboarding --output-filename=index.js",
+    "dev:feedback": "wp-scripts start --webpack-src-dir=js/FeedBack --output-path=build/feedback --output-filename=index.js",
+    "dev:actions": "wp-scripts start --webpack-src-dir=js/ActionPopup --output-path=build/action-popup --output-filename=index.js",
     "lint:js": "wp-scripts lint-js ./js",
     "release": "semantic-release --debug",
     "dist": "bash bin/dist.sh",
@@ -56,6 +64,7 @@
     "grunt-version": "^2.0.0",
     "grunt-wp-readme-to-markdown": "^2.0.1",
     "lodash": "^4.17.21",
+    "npm-run-all": "^4.1.5",
     "query-string": "^7.0.0",
     "raw-loader": "^4.0.2",
     "replace-in-file": "^6.2.0",
