--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "build:onboarding": "wp-scripts build --webpack-src-dir=js/Onboarding --output-path=build/onboarding --output-filename=index.js",
     "build:feedback": "wp-scripts build --webpack-src-dir=js/FeedBack --output-path=build/feedback --output-filename=index.js",
     "build:actions": "wp-scripts build --webpack-src-dir=js/ActionPopup --output-path=build/action-popup --output-filename=index.js",
+    "build:review": "wp-scripts build --webpack-src-dir=js/Review --output-path=build/review --output-filename=index.js",
     "dev": "npm-run-all --parallel dev:*",
     "dev:block": "wp-scripts start --webpack-src-dir=js/FeedzyBlock --output-path=build/block --output-filename=index.js",
     "dev:onboarding": "wp-scripts start --webpack-src-dir=js/Onboarding --output-path=build/onboarding --output-filename=index.js",
