add build version

--- a/.github/workflows/build-dev-artifacts.yml
+++ b/.github/workflows/build-dev-artifacts.yml
@@ -37,7 +37,11 @@ jobs:
       - name: Create zip
         run: |
           npm ci
-          npm run build
+          npm run build 
+          CURRENT_VERSION=$(node -p -e "require('./package.json').version")
+          COMMIT_HASH=$(git rev-parse --short HEAD)
+          DEV_VERSION="${CURRENT_VERSION}-dev.${COMMIT_HASH}"
+          npm run grunt version::${DEV_VERSION}
           npm run dist
       - name: Retrieve branch name
         id: retrieve-branch-name
