feat: add filter conditions
* [wip] Import Conditions

* fix: e2e test failing

* fix: unit tests

* test: adding phpunit tests

* fix: e2e test failing

* fix: backward compat

* Update ConditionsControl.js

* chore: add dummy conditions for upsell

* chore: allow editing of conditions without saving in free

* feat: add filters support to shortcode

* chore: improve upsell

* fix: display of regex strings as special chars

* chore: fix eslint error

* chore: fix broken code

* fix: the mess with escape and unescaping

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "build:onboarding": "wp-scripts build --webpack-src-dir=js/Onboarding --output-path=build/onboarding --output-filename=index.js",
     "build:feedback": "wp-scripts build --webpack-src-dir=js/FeedBack --output-path=build/feedback --output-filename=index.js",
     "build:actions": "wp-scripts build --webpack-src-dir=js/ActionPopup --output-path=build/action-popup --output-filename=index.js",
+    "build:conditions": "wp-scripts build --webpack-src-dir=js/Conditions --output-path=build/conditions --output-filename=index.js",
     "build:review": "wp-scripts build --webpack-src-dir=js/Review --output-path=build/review --output-filename=index.js",
     "dev": "npm-run-all --parallel dev:*",
     "dev:block": "wp-scripts start --webpack-src-dir=js/FeedzyBlock --output-path=build/block --output-filename=index.js",
@@ -30,6 +31,7 @@
     "dev:onboarding": "wp-scripts start --webpack-src-dir=js/Onboarding --output-path=build/onboarding --output-filename=index.js",
     "dev:feedback": "wp-scripts start --webpack-src-dir=js/FeedBack --output-path=build/feedback --output-filename=index.js",
     "dev:actions": "wp-scripts start --webpack-src-dir=js/ActionPopup --output-path=build/action-popup --output-filename=index.js",
+    "dev:conditions": "wp-scripts start --webpack-src-dir=js/Conditions --output-path=build/conditions --output-filename=index.js",
     "lint:js": "wp-scripts lint-js ./js",
     "release": "semantic-release --debug",
     "dist": "bash bin/dist.sh",
