--- a/.github/workflows/build-dev-artifacts.yml
+++ b/.github/workflows/build-dev-artifacts.yml
@@ -78,6 +78,11 @@ jobs:
 
       - name: Get comment body
         id: get-comment-body
+        env:
+          GITHUB_REPO_NAME: ${{ github.event.pull_request.base.repo.name }}
+          DEV_ZIP_BRANCH_NAME: ${{ needs.dev-zip.outputs.branch-name }}
+          DEV_ZIP_GIT_SHA_8: ${{ needs.dev-zip.outputs.git-sha-8 }}
+          GITHUB_HEAD_SHA: ${{ github.event.pull_request.head.sha }}
         run: |
           previewLink=$(node ./bin/generatePlaygroundPreviewLink.js)
 
